--- a/index.html
+++ b/index.html
@@ -1,7 +1,17 @@
-Amanda Rodrigues de Sousa
-<h3> Menu </h3>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pagina inicial</title>
+</head>
+<body>
+    <h3>Amanda Rodrigues de Sousa</h3>
+    <h3> Menu </h3>
 <ul>
   <li><a href="estagio.html">Relatório de Estágio</a></li>
   <li><a href="experiencias.html">Experiência</a></li>
   <li><a href="aspiracoes.html">Aspirações</a></li>
 </ul>
+</body>
+</html>
